# chess

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml  requirements.txt
chessref/: __init__.py
chessref/data/: __init__.py  augment.py  dataset.py  engine_targets.py  pgn_extract.py  planes.py
chessref/eval/: __init__.py  eval_match.py  eval_policy.py  eval_stockfish.py
chessref/inference/: __init__.py  mcts.py  predict.py
chessref/model/: __init__.py  loss.py  refiner.py
chessref/moves/: __init__.py  encoding.py  legal_mask.py
chessref/train/: __init__.py  selfplay.py  train_supervised.py
chessref/utils/: __init__.py  checkpoint.py  distributed.py  logging.py  metrics.py
configs/: data.yaml  eval.yaml  eval_stockfish.yaml  match.yaml  model.yaml  selfplay.yaml  train.yaml
scripts/: eval.sh  eval_stockfish.sh  selfplay.sh  train.sh
tests/: test_augment.py  test_checkpoint_utils.py  test_dataset.py  test_distributed_utils.py  test_encoding.py  test_engine_targets.py  test_eval_match.py  test_eval_policy.py  test_eval_stockfish.py  test_logging_utils.py  test_masks.py  test_metrics_utils.py  test_pgn_extract.py  test_planes.py  test_predict.py  test_refiner.py  test_selfplay.py  test_train_supervised.py
